--- a/lab7/css/lab7.css
+++ b/lab7/css/lab7.css
@@ -52,3 +52,6 @@ div.content {
   padding-bottom: 50px;
   padding-top: 50px;
 }
+#grad {
+  background-image: linear-gradient(to bottom right, #1e9600, );
+}
